--- a/index.css
+++ b/index.css
@@ -2710,6 +2710,10 @@ text-align: center !important;
         font-size: 35px !important;
         line-height: 57.26px !important;
     }
+    .inner-third-forth h5 {
+        font-size: 35px !important;
+        line-height: 57.26px !important;
+    }
 } 
 @media screen and (max-width: 393px) {
     .about h2 {
