--- a/index.css
+++ b/index.css
@@ -171,7 +171,7 @@ flex-wrap: wrap;
 justify-content: space-between;
 }
 .second-sec-first h1 {
-    width: 376px;
+    width: auto;
 height: 71px;
 margin: 0;
 cursor: default;
@@ -202,7 +202,7 @@ cursor: default;
 }
 .second-sec-first h2 {
     height: 71px;
-    width: 415px;
+    width: auto;
     font-family: "Montserrat";
 font-size: 58px;
 font-weight: 800;
