--- a/index.css
+++ b/index.css
@@ -254,9 +254,10 @@ text-align: center;
 color:#FFFFFF;
 }
 .third-image {
-  max-height: 100%;
+  height: 100%;
     position: absolute;
     right: 0;
+    width: 100%;
     display: flex;
 }
 .forth-image {
@@ -2811,5 +2812,19 @@ width: 290px !important;
     }
     #box-fifth-last h3 {
         font-size: 22px ;
+    }
+}
+@media screen and (min-width: 1280px) {
+
+    .newfirstdiv {
+        height: auto;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+    .second-section {
+        left: -321px;
     }
 }
